--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,21 @@
 .App {
   text-align: center;
+  margin: 0;
+  background-image: url('../src/assets/mundo\ 2.jpg');
+  background-size: cover;
+  height:100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+h1{
+  margin: 0;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
