--- a/client/src/components/CreateActivity/createActivity.css
+++ b/client/src/components/CreateActivity/createActivity.css
@@ -1,10 +1,11 @@
 .titleForm{
-    margin:   1em;
+    margin-top:1em;
+    margin-bottom: 0;
     text-align: center;
 }
 
 form{
-    width: 60%;
+    width: 50%;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -12,4 +13,17 @@ form{
 label,input,select,option{
     font-size: x-large;
     margin: 0.3em;
+}
+.buttonBack{
+    background-color: rgb(151, 20, 20);
+    padding: 0.2em 0.6em;
+    font-size: larger;
+    margin-left:7em ;
+}
+.button{
+    margin: auto;
+}
+
+.buttonClear{
+    background-color: rgb(15, 93, 54);
 }
