--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -8,19 +8,43 @@
 .home_countries{
   display: flex;
 }
-.filter{
-  width: 30%;
-  background-color: blueviolet;
-  margin-left: 0.5em;
+.navBar{
+  background-color: black;
+  color: aliceblue;
+  padding: 0.5em;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
 
+.filter{
+  height: fit-content;
+  background-color: rgba(70, 43, 226, 0.251);
+  margin-left: 0.5em;
 }
 button{
-  margin: 5px;
-  padding: 5px 12px;
-  
+  margin: 0 1.5em;
+  padding: 0.3em 0.8em; 
+}
+
+.goBackHome{
+  color: aliceblue;
+  background: none;
+  padding: 0;
+  margin-right: 8em;
+}
+
+h2{
+  padding: 0;
+  margin: 0 -1em;
+  font-size:xx-large;
+}
+Link{
+  padding-left: 5em;
 }
 .countryCard{
-  width: 70%;
+  width: 90%;
+  margin: 0.6em;
   display: grid;
   grid-template-columns: repeat(auto-fill,200px);
   gap: 2em;
