--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -1,5 +1,5 @@
 .landing{
-    background-color: #eef0f2;
+    background-color: #898588;
     width: 100%;
     height: 100vh;
     padding: 0;
@@ -7,7 +7,7 @@
     justify-content: space-around;
 }
 .title{
-    background-color: #eef0f2;
+    color:#F2F2F2;
     margin: auto 3em;
     width: 60%;
     text-align: center;
@@ -32,13 +32,14 @@ button{
   padding: 0.5em;
   border: none;
   border-radius: 10px;
-  background-color: rgb(50, 136, 136);
-  color: aliceblue;
+  background-color:#00010D;
+  color: #F2F2F2;
   font-size: x-large;
   text-align: center;
 }
 button:hover{
-  background-color: rgb(164, 164, 201);
+  background-color: #0F1140;
+  color:#D6D9C1;
   box-shadow: 4px 4px #0f4751;
   transition: 0.5s;
 }
