--- a/client/src/components/country/country.css
+++ b/client/src/components/country/country.css
@@ -1,6 +1,6 @@
 .card{
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid #F2F2F2;
     border-radius: 10px;
     backdrop-filter: blur(5px);
     
@@ -23,5 +23,5 @@ h3, img,p{
 }
 .click{
     text-decoration: none;
-    color: black;
+    color: #F2F2F2;
 }
