--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,5 +1,6 @@
 .home{
-  background-image: url('../../assets/mundo\ 2.jpg');
+  /* background-image: url('../../assets/mundo\ 2.jpg'); */
+  background-image: url('../../assets/mundo_b_n.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -9,9 +10,9 @@
   display: flex;
 }
 .navBar{
-  background-color: black;
-  color: aliceblue;
-  padding: 0.5em;
+  background-color: #0F1140;
+  color: #D6D9C1;
+  padding: 0.4em;
   align-items: center;
   display: flex;
   justify-content: space-between;
@@ -19,21 +20,47 @@
 
 .filter{
   height: fit-content;
-  background-color: rgba(70, 43, 226, 0.251);
-  margin-left: 0.5em;
-}
-button{
-  margin: 0 1.5em;
-  padding: 0.3em 0.8em; 
+  width: 100%;
+  /* background-color: rgba(70, 43, 226, 0.251); */
+  margin-top: 0.3em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
+button{
+  margin: 0 1.5em;
+  padding: 0.2em 0.7em; 
+}
+.butActiv{
+  border-radius: 100%;
+  padding: 0.8em;
+  background-color: #0F1140;
+}
 .goBackHome{
-  color: aliceblue;
+  color: #D6D9C1;
   background: none;
   padding: 0;
   margin-right: 8em;
 }
+.activ{
+  display: grid;
+  position: relative;
 
+}
+#bubble{
+  background-color: #0F1140;
+  display: none;
+  z-index: 1;
+  top:100%;
+  padding: 0.4em 0;
+  border-radius: 1em;
+}
+.createOrShow{
+  font-size: large;
+  margin-bottom: 0.2em;
+  padding: 0.6em ;
+}
 h2{
   padding: 0;
   margin: 0 -1em;
@@ -43,8 +70,8 @@ Link{
   padding-left: 5em;
 }
 .countryCard{
-  width: 90%;
-  margin: 0.6em;
+  width: 95%;
+  margin: 0.5em auto;
   display: grid;
   grid-template-columns: repeat(auto-fill,200px);
   gap: 2em;
