--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -1,13 +1,19 @@
 .landing{
-    background-color: #898588;
-    width: 100%;
-    height: 100vh;
-    padding: 0;
-    display: flex;
-    justify-content: space-around;
+  background-image: url('../../assets/estrellas.jpg');
+
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  display: flex;
+  justify-content: space-around; 
+    /* background-color: #898588;
+   */
 }
 .title{
-    color:#F2F2F2;
+    color:#D6D9C1;
     margin: auto 3em;
     width: 60%;
     text-align: center;
@@ -33,7 +39,7 @@ button{
   border: none;
   border-radius: 10px;
   background-color:#00010D;
-  color: #F2F2F2;
+  color: #D6D9C1;
   font-size: x-large;
   text-align: center;
 }
