--- a/client/src/components/country/country.css
+++ b/client/src/components/country/country.css
@@ -2,7 +2,7 @@
     text-align: center;
     border: 1px solid #F2F2F2;
     border-radius: 10px;
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(100px); */
     
 }
 .flag{
