--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,6 +1,8 @@
 .home{
   /* background-image: url('../../assets/mundo\ 2.jpg'); */
-  background-image: url('../../assets/mundo_b_n.jpg');
+  /* background-image: url('../../assets/mundo_b_n.jpg'); */
+  background-image: url('../../assets/estrellas.jpg');
+
   background-size: cover;
   background-position: center;
   height: 100vh;
