--- a/client/src/components/Pagination/pagination.css
+++ b/client/src/components/Pagination/pagination.css
@@ -2,7 +2,12 @@
     text-align: center;
     margin: 10px auto;
     width: 35%;
-    background-color: rgba(112, 191, 191, 0.503);
+    /* background-color: #0f11407b; */
     border-radius: 1em;
     padding: 0.3em;
+    color:#D6D9C1
+}
+.pageButton{
+    background-color: #D6D9C1;
+    color:#0F1140
 }
