--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -10,6 +10,7 @@
 }
 .home_countries{
   display: flex;
+  margin-top: 2em;
 }
 .navBar{
   background-color: #0F1140;
@@ -24,7 +25,7 @@
   height: fit-content;
   width: 100%;
   /* background-color: rgba(70, 43, 226, 0.251); */
-  margin-top: 0.3em;
+  margin-top: 0.5em;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -35,9 +36,9 @@ button{
   padding: 0.2em 0.7em; 
 }
 .butActiv{
-  border-radius: 100%;
-  padding: 0.8em;
-  background-color: #0F1140;
+  color:#0F1140;
+  padding: 0.2em 0.4em;
+  background-color: #d6d9c1e3;
 }
 .goBackHome{
   color: #D6D9C1;
