--- a/client/src/components/countryDetails/countryDetails.css
+++ b/client/src/components/countryDetails/countryDetails.css
@@ -6,6 +6,7 @@
    display: flex; 
    justify-content: space-around;
    width: 90%;
+   color: #D6D9C1;
 }
 .buttonBack{
     background-color: rgb(151, 20, 20);
@@ -15,17 +16,42 @@
 }
 .countryDetails{
     width: 60%;
-    border: 2px solid black;
+    border: 2px solid #D6D9C1;
     margin: 1em;
     text-align: center;
+    font-size: large;
+    border-radius: 1em;
 }
-.flagImg{
-    width: 30%;
+.headerDetails,.contentDetails{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0.5em;
+}
+#code{
+    margin: 0.5em;
+    padding: 1em;
+    border-radius: 100%;
+    background-color: #D6D9C1;
+    color: #0F1140;   
+}
+#content{
+    width: 100%;
+}
+h4{
+    font-size: xx-large;
+}
+h5{
+    margin: 0.2em;
+    padding: 0.1em;
+    font-size: larger;
+}
+.flagDetails{
+    width: 40%;
     border-radius: 1em;
 }
 .activities{
     width: 40%;
-    border: 2px solid black;
+    border: 2px solid #D6D9C1;
     margin: 1em;
     text-align: center;
 }
