--- a/client/src/components/countryDetails/countryDetails.css
+++ b/client/src/components/countryDetails/countryDetails.css
@@ -5,7 +5,7 @@
 .page{
    display: flex; 
    justify-content: space-around;
-   width: 90%;
+   margin: 1em 0.7em;
    color: #D6D9C1;
 }
 .buttonBack{
@@ -15,9 +15,10 @@
     margin-top: 2em;
 }
 .countryDetails{
-    width: 60%;
+    width: 40%;
+    height: 40%;
     border: 2px solid #D6D9C1;
-    margin: 1em;
+    margin: 2.4em 0;
     text-align: center;
     font-size: large;
     border-radius: 1em;
@@ -29,16 +30,18 @@
 }
 #code{
     margin: 0.5em;
-    padding: 1em;
+    padding: 0.5em;
+    font-size: medium;
     border-radius: 100%;
     background-color: #D6D9C1;
     color: #0F1140;   
 }
 #content{
-    width: 100%;
+    width: 60%;
 }
 h4{
     font-size: xx-large;
+    margin: 0;
 }
 h5{
     margin: 0.2em;
@@ -46,14 +49,16 @@ h5{
     font-size: larger;
 }
 .flagDetails{
-    width: 40%;
+    width: 20%;
+    height: 20%;
     border-radius: 1em;
+    margin: auto;
 }
 .activities{
-    width: 40%;
-    border: 2px solid #D6D9C1;
-    margin: 1em;
+    width: 60%;
+    border-radius: 1em;
     text-align: center;
+    display: none;
 }
 .cardActivities{
     width: 50%;
@@ -72,4 +77,17 @@ h5{
     background-color: red;
     margin: 0;
     padding: 0;
+}
+.actR{
+    width: 100%;
+    height: 50px;
+}
+#activityDetails{
+    margin-top: 0;
+    border: none;
+}
+#exitActiv{
+    background-color: red;
+    font-size: medium;
+    margin: 0;
 }
