--- a/client/src/components/Activities/CreateActivity/createActivity.css
+++ b/client/src/components/Activities/CreateActivity/createActivity.css
@@ -9,10 +9,14 @@
 }
 
 form{
-    width: 50%;
-    margin: auto;
+    width: 40%;
+    margin-left: 8em; 
+    margin-top: 1em;
+    border-radius: 1em;
     display: flex;
     flex-direction: column;
+    /* backdrop-filter: blur(10px) */
+    background-color: #0f1140a5; 
 }
 label,input,select,option{
     font-size: large;
@@ -25,9 +29,13 @@ label,input,select,option{
     margin-left:7em ;
     margin-top: 0.5em;
 }
+.button{
+    margin: 1em;
+    text-align: center;
+}
 .buttonSubmit{
     margin: auto;
-    background-color: aquamarine;
+    background-color: #0F1140;
 }
 
 .buttonClear{
@@ -35,9 +43,15 @@ label,input,select,option{
 }
 .msjError{
     background-color: rgba(221, 26, 26, 0.616);
-    color: white;
+    color: #F2F2F2;
     text-align: center;
     font-size: large;
     width: 100%;
     border-radius: 1em;
+}
+#createActivities{
+    display: flex;
+}
+.cardC{
+    margin-left: 1em;
 }
