--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -1,5 +1,5 @@
 .landing{
-  background-image: url('../../assets/estrellas.jpg');
+  /* background-image: url('../../assets/estrellas.jpg'); */
 
   background-size: cover;
   background-position: center;
@@ -9,8 +9,8 @@
   padding: 0;
   display: flex;
   justify-content: space-around; 
-    /* background-color: #898588;
-   */
+  background-color: #22325A;
+   
 }
 .title{
     color:#D6D9C1;
@@ -32,7 +32,9 @@ img{
     width: 100%;
     border-radius: 100%;
 }
-
+video{
+  border-radius: 100%;
+}
   
 button{
   padding: 0.5em;
