--- a/client/src/components/Activities/ShowActivities/showActivities.css
+++ b/client/src/components/Activities/ShowActivities/showActivities.css
@@ -1,21 +1,23 @@
 
 .tableActivities{
     width: 90%;
-    border: 2px solid #D6D9C1;
-    color: #D6D9C1;
+    border: 2px solid #D9B07E;
+    color: #D9B07E;
     margin:  1em auto;
     font-size: larger;
 }
 thead{
-    background-color: #0f1140b1;
+    background-color: #4f7b8c7b;
 } 
 th{
-    border: 2px solid #D6D9C1;
+    border: 2px solid #D9B07E;
     padding: 0.3em;
 }
 #buttonDelete{
     background-color: rgb(151, 20, 20);
+    color: #D9B07E;
 }
 #buttonUpdate{
-    background-color:#0f1140b1
+    background-color:#D9B07E;
+    color: black;
 }
