--- a/client/src/components/Filter/filterByName/filter.css
+++ b/client/src/components/Filter/filterByName/filter.css
@@ -2,7 +2,15 @@
     width: 20%;
     margin: auto;
     display: initial;
+    background-color: #4F7B8C;
+
 }
 label{
     font-size: larger;
+    color: #D9B07E;
+}
+input{
+    border-radius: 1em;
+    border: none;
+    background-color: #D9B07E;
 }
