--- a/client/src/components/Pagination/pagination.css
+++ b/client/src/components/Pagination/pagination.css
@@ -5,9 +5,9 @@
     /* background-color: #0f11407b; */
     border-radius: 1em;
     padding: 0.3em;
-    color:#D6D9C1
+    color:#D9B07E
 }
 .pageButton{
-    background-color: #D6D9C1;
-    color:#0F1140
+    background-color: #4F7B8C;
+    color:#D9B07E;
 }
