--- a/client/src/components/Filter/filterByContinent/filterByContinent.css
+++ b/client/src/components/Filter/filterByContinent/filterByContinent.css
@@ -1,7 +1,9 @@
 label{
     font-size: x-small;
-    color: #F2F2F2;
+    color: #D9B07E;
 }
 select{
     border-radius: 1em;
+    background-color: #D9B07E;
+    
 }
