--- a/client/src/components/FormCardCountry/formCardCountry.css
+++ b/client/src/components/FormCardCountry/formCardCountry.css
@@ -2,7 +2,7 @@
     width: 200px;
     border-radius: 1em;
     margin: 0.2em;
-    color: #F2F2F2;
+    color: #D9B07E;
 }
 .headerCardCountry{
     display: flex;
@@ -22,5 +22,5 @@
     display: grid;
     grid-template-columns: repeat(auto-fill,150px);
     gap: 2em;
-    justify-content: center;;
+    justify-content: center;
 }
