--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -16,7 +16,7 @@
     margin-top: 5em;
     width: 60%;
     text-align: center;
-    font-size: x-large;
+    font-size: large;
 }  
 button{
   padding: 0.8em;
