--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,14 +1,8 @@
-.home{
-  /* background-image: url('../../assets/mundo\ 2.jpg'); */
-  /* background-image: url('../../assets/mundo_b_n.jpg'); */
-  background-image: url('../../assets/estrellas.jpg'); 
-  /* background-color: #010002;; */
-  /* background-size: cover;
-  background-position: center;
-  height: fit-content;
-   */
-   background-size: cover;
-   height: 120vh;
+.error{
+  color: #D9B07E;
+  width: 100%;
+  margin: auto;
+  text-align: center;
 }
 .home_countries{
   display: flex;
