--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('../src/assets/estrellas.jpg'); 
+  background-attachment: fixed;
+  background-size:cover;
+  display: static;
 }
 
 code {
