--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -31,7 +31,7 @@ button {
   margin: 0 1.5em;
   padding: 0.2em 0.7em;
 }
-#butActiv {
+.butActiv {
   color: #d9b07e;
   padding: 0.2em 0.4em;
   background-color: #4f7b8c;
